--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -1,9 +1,29 @@
 global:
-  scrape_interval: 30s
+  scrape_interval:     15s
+  evaluation_interval: 15s
+  
 scrape_configs:
-  - job_name: mc-monitor
+  - job_name: 'nodeexporter'
+    scrape_interval: 5s
     static_configs:
-      - targets:
-          - monitor:8080
-      - targets:
-          - cadvisor:8080
+      - targets: ['nodeexporter:9100']
+  
+  - job_name: 'cadvisor'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['cadvisor:8080']
+
+  - job_name: 'prometheus'
+    scrape_interval: 10s
+    static_configs:
+      - targets: ['localhost:9090']
+
+  - job_name: 'sonnenexporter'
+    scrape_interval: 10s
+    static_configs:
+      - targets: ['sonnenpython:9423']
+
+  - job_name: 'telegraf'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['telegraf:9283']
