--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -1,7 +1,7 @@
 global:
   scrape_interval:     15s
   evaluation_interval: 15s
-  
+
 scrape_configs:
   - job_name: 'nodeexporter'
     scrape_interval: 5s
@@ -27,3 +27,8 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ['telegraf:9283']
+
+  - job_name: 'minecraftexporter'
+    scrape_interval: 15s
+    static_configs:
+      - targets: ['minecraftexporter:8000']
